--- a/food/index.html
+++ b/food/index.html
@@ -78,71 +78,71 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Chicago pizza — 31 ₾<p>Specialty tomato sauce, bacon, tomatoes, bacon, gherkins, mozzarella cheese, red onion, herbs</p></font></h3>
-								<img src="../images/Chicago.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Chicago.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Brooklyn Pizza — 31 ₾<p>Specialty tomato sauce, mozzarella, cooked sausage, salami sausage, pepperoni sausage, mushrooms, dill</p></font></h3>
-								<img src="../images/bruklin.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/bruklin.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Good morning pizza — 26 ₾<p>Specialty tomato sauce, mozzarella cheese, bacon, tomatoes, chicken eggs, herbs</p></font></h3>
-								<img src="../images/good-morning.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/good-morning.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Zeus Pizza — 24 ₾<p>Olive oil, mozzarella cheese, tomatoes, bell pepper, olives, cucumber, cottage cheese, red onion</p></font></h3>
-								<img src="../images/zeus.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/zeus.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Pizza Carnea — 34 ₾<p>Specialty tomato sauce, mozzarella cheese, ham, chicken fillet, raw smoked bacon, salami sausage, tomatoes, onions</p></font></h3>
-								<img src="../images/Carnea.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Carnea.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Hunter's Pizza — 28 ₾<p>Specialty tomato sauce, mozzarella cheese, hunting sausages, mushrooms, bell peppers, onions, tomatoes, bacon, greens</p></font></h3>
-								<img src="../images/Hunter.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Hunter.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Diablo pizza — 30 ₾<p>Specialty tomato sauce, mozzarella cheese, ham, pepperoni sausage, mushrooms, hot chili peppers</p></font></h3>
-								<img src="../images/Diablo.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Diablo.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Caesar pizza — 28 ₾<p>Caesar sauce, mozzarella cheese, parmesan cheese, chicken, bacon, iceberg lettuce, cherry tomatoes, croutons</p></font></h3>
-								<img src="../images/Caesar.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Caesar.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Shrimp Pizza — 31 ₾<p>Cheese-garlic sauce, mozzarella cheese, shrimp, olives</p></font></h3>
-								<img src="../images/Shrimp-Pizza.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Shrimp-Pizza.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Four Cheese Pizza — 29 ₾<p>Specialty tomato sauce, mozzarella cheese, dorblu cheese, sulguni cheese, parmesan cheese</p></font></h3>
-								<img src="../images/Four-Cheese-Pizza.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Four-Cheese-Pizza.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Pepperoni pizza — 28 ₾<p>Specialty tomato sauce, mozzarella cheese, pepperoni sausage, bell peppers, olives</p></font></h3>
-								<img src="../images/Pepperoni-pizza.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Pepperoni-pizza.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Pizza Suprim — 32 ₾<p>Specialty tomato sauce, mozzarella cheese, pepperoni sausage, bell peppers, chicken fillet, onions, mushrooms, olives</p></font></h3>
-								<img src="../images/Suprim.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Suprim.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Pizza Romana — 26 ₾<p>Olive oil, mozzarella cheese, Roquefort cheese, pear</p></font></h3>
-								<img src="../images/Romana.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Romana.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Pizza Bellissimo — 32 ₾<p>Specialty tomato sauce, mozzarella cheese, parmesan cheese, pepperoni sausage, chicken, mushrooms, bacon, tomatoes, onions, garlic, dill, parsley, green onions</p></font></h3>
-								<img src="../images/Bellissimo.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Bellissimo.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Pizza Bolognese — 31 ₾<p>Specialty tomato sauce, mozzarella cheese, bacon, minced meat, tomatoes, onions, herbs</p></font></h3>
-								<img src="../images/Bolognese.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Bolognese.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Pizza Spicy — 31 ₾<p>Specialty tomato sauce, mozzarella cheese, dorblu cheese, beef tenderloin, bacon, mushrooms, hot chili peppers</p></font></h3>
-								<img src="../images/Pizza-Spicy.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Pizza-Spicy.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Cippolino's Pizza — 25 ₾<p>Specialty tomato sauce, mozzarella cheese, chicken fillet, gherkins, red onion, basil, herbs</p></font></h3>
-								<img src="../images/Cippolino.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Cippolino.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Pizza Gallina — 23 ₾<p>Specialty tomato sauce, mozzarella cheese, chicken fillet</p></font></h3>
@@ -150,11 +150,11 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Julienne pizza — 25 ₾<p>Sour cream sauce, mozzarella cheese, chicken fillet, mushrooms, onions, greens</p></font></h3>
-								<img src="../images/Julienne.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Julienne.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Rustic pizza — 29 ₾<p>Specialty tomato sauce, mozzarella cheese, beef tenderloin, gherkins, tomatoes, greens</p></font></h3>
-								<img src="../images/Rustic.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Rustic.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Pizza Carbonara — 26 ₾<p>Specialty tomato sauce, mozzarella cheese, parmesan cheese, chicken egg, raw smoked bacon, lettuce, tomatoes</p></font></h3>
@@ -179,23 +179,23 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Onion rings — 10 ₾</font></h3>
-								<img src="../images/onion-rings.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/onion-rings.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Ham sandwich — 13 ₾</font></h3>
-								<img src="../images/Ham-sandwich.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Ham-sandwich.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Chicken sandwich — 13 ₾</font></h3>
-								<img src="../images/Chicken-Sandwich.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Chicken-Sandwich.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Nuggets — 9 ₾</font></h3>
-								<img src="../images/Nuggets.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Nuggets.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">French fries — 10 ₾</font></h3>
-								<img src="../images/French-fries.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/French-fries.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Rustic potatoes — 10 ₾</font></h3>
@@ -208,76 +208,76 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Tiger shrimp (6 pcs) — 13 ₾</font></h3>
-								<img src="../images/baked-shrimps.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/baked-shrimps.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Boiled shrimp 90/120 (10 pcs) — 9 ₾</font></h3>
-								<img src="../images/shrimps.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/shrimps.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Khinkali (1 pc) — 1 ₾</font></h3>
-								<img src="../images/khinkali.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/khinkali.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Cheese Sticks (5 pcs) — 15 ₾</font></h3>
-								<img src="../images/cheese-sticks.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/cheese-sticks.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 						</div><hr>
 						<h2>Grill</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Shrimp (1 pc) — 5-6 ₾</font></h3>
-								<img src="../images/shrimp.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/shrimp.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Tilapia fish — 7 ₾</font></h3>
-								<img src="../images/tilapia.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/tilapia.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Chicken wings (3 pcs) — 9 ₾</font></h3>
-								<img src="../images/chicken-wings.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/chicken-wings.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Pork medallions — 9 ₾</font></h3>
-								<img src="../images/steak.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/steak.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Sausages (2pcs) — 7 ₾</font></h3>
-								<img src="../images/Sausages.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Sausages.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Vegetables — 10 ₾</font></h3>
-								<img src="../images/grilled-vegetables.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/grilled-vegetables.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Potato — 5 ₾</font></h3>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Chicken legs — 12 ₾</font></h3>
-								<img src="../images/legs.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/legs.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Sausage (1 pc) — 7 ₾</font></h3>
-								<img src="../images/sausage-one.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/sausage-one.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 						</div><hr>
 						<h2>Salads</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Greek salad with cottage cheese — 15 ₾</font></h3>
-								<img src="../images/Greek-salad.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Greek-salad.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Caesar with smoked chicken — 17 ₾</font></h3>
-								<img src="../images/Caesar-with-smoked-chicken.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Caesar-with-smoked-chicken.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Shrimp Caesar — 25 ₾</font></h3>
-								<img src="../images/Shrimp-Caesar.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Shrimp-Caesar.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Vegetable salad — 9 ₾</font></h3>
-								<img src="../images/Vegetable-salad.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Vegetable-salad.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 						</div>
 						<hr><h2 data-i18n="pleaseleaveareview">Please leave a review</h2>
