--- a/index.html
+++ b/index.html
@@ -93,10 +93,13 @@
 						<h2 data-i18n="food">Food</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<h3 data-i18n="homestylepork"><font size="3">Homestyle's pork — 14 ₾</font></h3>
-								<img src="images/Homestyle's_pork.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<h3><font size="3">Brooklyn Pizza — 33₾<p>Specialty tomato sauce, mozzarella, cooked sausage, salami sausage, pepperoni sausage, mushrooms, dill</p></font></h3>
+								<img src="images/bruklin.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
 							</article>
-						</div><hr>
+						</div>
+						<ul class="actions">
+							<li><a href="/food" class="button">Full food menu</a></li>
+						</ul><br /><hr>
 						<section id="two">
 							<h2 data-i18n="welcome">Welcome to our bar!</h2>
 						<p data-i18n="great">Great drinks and a rock-bar atmosphere await you here every evening. <b>"Feeling down? Have a drink!"</b> — That's our motto! Enjoy the moment and pleasant company!</p>
