--- a/food/index.html
+++ b/food/index.html
@@ -146,7 +146,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Pizza Gallina — 23 ₾<p>Specialty tomato sauce, mozzarella cheese, chicken fillet</p></font></h3>
-								<img src="../images/Gallina.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<!-- <img src="../images/Gallina.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" /> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Julienne pizza — 25 ₾<p>Sour cream sauce, mozzarella cheese, chicken fillet, mushrooms, onions, greens</p></font></h3>
