--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						<ul class="actions">
 							<li data-i18n="fulldrinks"><a href="/drinks" class="button">Full drinks menu</a></li>
 						</ul><br /><hr>
-						<h2 data-i18n="food">Food</h2>
+						<h2 data-i18n="food"><a href="/drinks">Food</a></h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<h3><font size="3">Brooklyn Pizza — 33₾<p>Specialty tomato sauce, mozzarella, cooked sausage, salami sausage, pepperoni sausage, mushrooms, dill</p></font></h3>
