--- a/index.html
+++ b/index.html
@@ -93,12 +93,16 @@
 						<h2 data-i18n="food"><a href="/food">Food</a></h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<h3><font size="3">Brooklyn Pizza — 33₾<p>Specialty tomato sauce, mozzarella, cooked sausage, salami sausage, pepperoni sausage, mushrooms, dill</p></font></h3>
-								<img src="images/bruklin.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<h3 data-i18n="Chicago"><font size="3">Chicago pizza — 31 ₾<p>Specialty tomato sauce, bacon, tomatoes, bacon, gherkins, mozzarella cheese, red onion, herbs</p></font></h3>
+								<img src="../images/Chicago.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<h3 data-i18n="Goodmorning"><font size="3">Good morning pizza — 26 ₾<p>Specialty tomato sauce, mozzarella cheese, bacon, tomatoes, chicken eggs, herbs</p></font></h3>
+								<img src="../images/good-morning.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="/food" class="button">Full food menu</a></li>
+							<li data-i18n="fullfood"><a href="/food" class="button">Full food menu</a></li>
 						</ul><br /><hr>
 						<section id="two">
 							<h2 data-i18n="welcome">Welcome to our bar!</h2>
