--- a/food/index.html
+++ b/food/index.html
@@ -89,6 +89,9 @@
 								<img src="../images/Bellissimo.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<h3 data-i18n="Americana"><font size="3">Pizza Americana — 32 ₾<p>Specialty tomato sauce, mozzarella cheese, ham, pepperoni sausage, mushrooms</p></font></h3>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<h3 data-i18n="Bolognese"><font size="3">Pizza Bolognese — 31 ₾<p>Specialty tomato sauce, mozzarella cheese, bacon, minced meat, tomatoes, onions, herbs</p></font></h3>
 								<img src="../images/Bolognese.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
 							</article>
@@ -136,6 +139,9 @@
 								<h3 data-i18n="Halal"><font size="3">Halal pizza — 28 ₾<p>Specialty tomato sauce, mozzarella cheese, beef, smoked chicken, tomatoes, onions</p></font></h3>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<h3 data-i18n="Hawaii"><font size="3">Pizza Hawaii — 27 ₾<p>Specialty tomato sauce, mozzarella cheese, chicken fillet, pineapple</p></font></h3>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<h3 data-i18n="Goodmorning"><font size="3">Good morning pizza — 26 ₾<p>Specialty tomato sauce, mozzarella cheese, bacon, tomatoes, chicken eggs, herbs</p></font></h3>
 								<img src="../images/good-morning.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
 							</article>
@@ -158,8 +164,17 @@
 								<h3 data-i18n="ClubPizza"><font size="3">Pizza Club — 25 ₾<p>Specialty tomato sauce, mozzarella cheese, ham, tomatoes</p></font></h3>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<h3 data-i18n="Margarita"><font size="3">Pizza Margarita — 25 ₾<p>Specialty tomato sauce, mozzarella cheese, tomatoes, basil</p></font></h3>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<h3 data-i18n="Felice"><font size="3">Pizza Felice — 25 ₾<p>Specialty tomato sauce, mozzarella cheese, becon, pineapple</p></font></h3>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<h3 data-i18n="Zeus"><font size="3">Zeus Pizza — 24 ₾<p>Olive oil, mozzarella cheese, tomatoes, bell pepper, olives, cucumber, cottage cheese, red onion</p></font></h3>
 								<img src="../images/zeus.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<h3 data-i18n="Vegeta"><font size="3">Vegeta Pizza — 24 ₾<p>Specialty tomato sauce, mozzarella cheese, onion, tomatoes, sweet pepper, zucchini, champinoins, greens</p></font></h3>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3 data-i18n="Gallina"><font size="3">Pizza Gallina — 23 ₾<p>Specialty tomato sauce, mozzarella cheese, chicken fillet</p></font></h3>
