--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 						<h2 data-i18n="food"><a href="/food">Food</a></h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<h3 data-i18n="Chicago"><font size="3">Chicago pizza — 31 ₾<p>Specialty tomato sauce, bacon, tomatoes, bacon, gherkins, mozzarella cheese, red onion, herbs</p></font></h3>
-								<img src="../images/Chicago.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
+								<h3 data-i18n="Rustic"><font size="3">Rustic pizza — 32 ₾<p>Specialty tomato sauce, mozzarella cheese, beef tenderloin, gherkins, tomatoes, greens</p></font></h3>
+								<img src="../images/Rustic.webp" class="image fit thumb" loading="lazy" decoding="async" alt="" />
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3 data-i18n="Goodmorning"><font size="3">Good morning pizza — 26 ₾<p>Specialty tomato sauce, mozzarella cheese, bacon, tomatoes, chicken eggs, herbs</p></font></h3>
